; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/panel/extr_panel-arm-versatile.c_versatile_panel_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/panel/extr_panel-arm-versatile.c_versatile_panel_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_panel = type { i32 }
%struct.versatile_panel = type { i64, i32 }

@.str = private unnamed_addr constant [21 x i8] c"disable IB2 display\0A\00", align 1
@IB2_CTRL = common dso_local global i32 0, align 4
@IB2_CTRL_LCD_MASK = common dso_local global i32 0, align 4
@IB2_CTRL_LCD_SD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_panel*)* @versatile_panel_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @versatile_panel_disable(%struct.drm_panel* %0) #0 {
  %2 = alloca %struct.drm_panel*, align 8
  %3 = alloca %struct.versatile_panel*, align 8
  store %struct.drm_panel* %0, %struct.drm_panel** %2, align 8
  %4 = load %struct.drm_panel*, %struct.drm_panel** %2, align 8
  %5 = call %struct.versatile_panel* @to_versatile_panel(%struct.drm_panel* %4)
  store %struct.versatile_panel* %5, %struct.versatile_panel** %3, align 8
  %6 = load %struct.versatile_panel*, %struct.versatile_panel** %3, align 8
  %7 = getelementptr inbounds %struct.versatile_panel, %struct.versatile_panel* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %22

10:                                               ; preds = %1
  %11 = load %struct.versatile_panel*, %struct.versatile_panel** %3, align 8
  %12 = getelementptr inbounds %struct.versatile_panel, %struct.versatile_panel* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @dev_dbg(i32 %13, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %15 = load %struct.versatile_panel*, %struct.versatile_panel** %3, align 8
  %16 = getelementptr inbounds %struct.versatile_panel, %struct.versatile_panel* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i32, i32* @IB2_CTRL, align 4
  %19 = load i32, i32* @IB2_CTRL_LCD_MASK, align 4
  %20 = load i32, i32* @IB2_CTRL_LCD_SD, align 4
  %21 = call i32 @regmap_update_bits(i64 %17, i32 %18, i32 %19, i32 %20)
  br label %22

22:                                               ; preds = %10, %1
  ret i32 0
}

declare dso_local %struct.versatile_panel* @to_versatile_panel(%struct.drm_panel*) #1

declare dso_local i32 @dev_dbg(i32, i8*) #1

declare dso_local i32 @regmap_update_bits(i64, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
